HelloUltraviolet/Fixtures/RejectedSource/Names/PrivateAccess/Expected.uv
//! Expected diagnostic metadata for the PrivateAccess rejected-source specimen.

expectedDiagnostic("E-MOD-1207", "Access-Err")
expectedDiagnostic("E-MOD-1207", "diagnostics.NameResolutionAndReservedNames")
